terraform/modules/aws-security-group/sg_microk8s.tf
resource "aws_security_group" "microk8s" {
  name        = "allow_tls_microk8s"
  description = "Allow TLS inbound traffic for microk8s"
  vpc_id      = var.vpc_id

  ingress {
    description      = "API server"
    from_port        = 16443
    to_port          = 16443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  ingress {
    description      = "kubelet"
    from_port        = 10250
    to_port          = 10250
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  ingress {
    description      = "kubelet"
    from_port        = 10255
    to_port          = 10255
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  ingress {
    description      = "cluster-agent"
    from_port        = 25000
    to_port          = 25000
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  ingress {
    description      = "etcd"
    from_port        = 12379
    to_port          = 12379
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  ingress {
    description      = "kube-controller"
    from_port        = 10257
    to_port          = 10257
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  ingress {
    description      = "kube-scheduler"
    from_port        = 10259
    to_port          = 10259
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  ingress {
    description      = "dqlite"
    from_port        = 19001
    to_port          = 19001
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  ingress {
    description      = "calico"
    from_port        = 4789
    to_port          = 4789
    protocol         = "udp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  ingress {
    description      = "dashboard"
    from_port        = 10443
    to_port          = 10443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  tags = {
    Name = "Security Group for Services binding to the default Host interface"
  }
}
